# integraria-common

./: Makefile  pyproject.toml
src/integrar-common/events/: factory.py
src/integrar_common/events/: base.py
src/integrar_common/events/schemas/: artefato_novo.schema.json  pipeline_falhou.schema.json  segmentos_prontos.schema.json
