[project]
name = "integrar-common"
version = "0.1.0"
description = "Contratos, esquemas, modelos e utilitários comuns para o pipeline de ingestão legal/RAG"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-json-logger>=2.0.7",
    "jsonschema>=4.22",
    "orjson>=3.10",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integrar-common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
